k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: app
  labels:
    app: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  sessionAffinity: None
